# games

./: .gitignore  README.md  pyproject.toml  yahtzee.py
Dice/: rolling.py  rolling_dice.py
dice/: five_dice.py  rolling.py  rolling_dice.py
