[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "games"
description = ""
readme = "README.md"
authors = [ {name="Marc Schwarzschild", email="ms@TheBrookhavenGroup.com"}, ]
maintainers = [ {name="Marc Schwarzschild", email="ms@TheBrookhavenGroup.com"}, ]
requires-python = ">=3.7"
keywords = ["games", "education", "dice", "yahtzee"]
classifiers = [
    "Topic :: Games/Entertainment",
    "Topic :: Education",
    "License :: Free For Educational Use",
    ]
license = {text = "MIT"}
dependencies = []
version = "0.1.0"

[project.urls]
homepage = "https://github.com/schwarzschild/games"
repository = "https://github.com/schwarzschild/games"
documentation = "https://github.com/schwarzschild/games"
